PostGIS 3.2.9
xxxx/xx/xx

PostgreSQL 9.6-15 required. GEOS 3.6+ required but GEOS 3.9+ to take advantage of all features.
Proj 4.9+ required.

* Bug Fixes  *

 - #5876, Fix ST_AddPoint with empty point argument (Paul Ramsey)


PostGIS 3.2.8
2024/12/22

PostgreSQL 9.6-15 required. GEOS 3.6+ required but GEOS 3.9+ to take advantage of all features.
Proj 4.9+ required.

* Bug Fixes  *

 - #5795, [topology] Fix ST_NewEdgesSplit can cause invalid topology (Björn Harrtell)
 - #5677, ST_Union(geom[]) should unary union single entry arrays (Paul Ramsey)
 - #5589, ST_3DDistance error for shared first point (Paul Ramsey)
 - #5686, ST_NumInteriorRings and Triangle crash (Paul Ramsey)
 - #5765, Handle nearly co-linear edges with slightly less slop (Paul Ramsey)
 - #5745, St_AsLatLonText rounding errors (Paul Ramsey)
 - Handle null returns from wkb parser (Paul Ramsey)


PostGIS 3.2.7
2024/02/06

This version requires PostgreSQL 9.6-15, GEOS 3.6 or higher, and Proj 4.9+
Additional features are enabled if you are running GEOS 3.9+
 (and ST_MakeValid enhancements with 3.10+),
Proj 6.1+, and PostgreSQL 14+.

* Bug Fixes and Enhancements *
 - #5610, Regression fix: Allow Nan and infinity again
          in ST_SetPoint (Regina Obe)
 - #5627, #5647, Handling of EMPTY components in PiP check (Paul Ramsey)
 - #5629, Handling EMPTY components in repeated point removal (Paul Ramsey)
 - #5604, Handle distance between collections with empty elements (Paul Ramsey)
 - #5635, Handle NaN points in ST_Split (Regina Obe)
 - Logic error in ST_Covers(geography) (Paul Ramsey)
 - #5646, Crash on collections with empty members (Paul Ramsey)
 - #5580, Handle empty collection components in 3d distance (Paul Ramsey)
 - #5639, ST_DFullyWithin line/poly error case (Paul Ramsey)
 - #5662, Change XML parsers to SAX2 (Paul Ramsey)


PostGIS 3.2.6
2023/11/19

This version requires PostgreSQL 9.6-15, GEOS 3.6 or higher, and Proj 4.9+
Additional features are enabled if you are running GEOS 3.9+