@@ -7,6 +7,7 @@ Proj 4.9+ required.
 * Bug Fixes  *
 
  - #5876, Fix ST_AddPoint with empty point argument (Paul Ramsey)
+ - #5818, GT-244 Fix CG_IsSolid function (Loïc Bartoletti)
 
 
 PostGIS 3.2.8
